thursday evening push

--- a/active_dispatch_combine_and_process.ipynb
+++ b/active_dispatch_combine_and_process.ipynb
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "id": "04391844-4068-48b9-93dd-bbf580ecd1db",
    "metadata": {},
    "outputs": [
@@ -420,8 +420,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('2025-04-10', '18', '18:06:58')\n",
-      "('2025-04-10', '18', '18:09:01')\n"
+      "('2025-04-05', '00', '00:39:01')\n",
+      "('2025-04-05', '01', '01:00:01')\n",
+      "('2025-04-05', '00', '00:45:45')\n",
+      "('2025-04-05', '00', '00:48:01')\n"
      ]
     }
    ],
@@ -433,13 +435,15 @@
     "    timepart = converted[11:19]\n",
     "    return datepart, hr, timepart\n",
     "\n",
-    "print(calculate_date('1744326418000'))\n",
-    "print(calculate_date('1744326541000'))"
+    "print(calculate_date('1743831541000'))\n",
+    "print(calculate_date('1743832801000'))\n",
+    "print(calculate_date('1743831945000'))\n",
+    "print(calculate_date('1743832081000'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "id": "052c36e4-7697-439b-9353-3def13f789b7",
    "metadata": {},
    "outputs": [
@@ -447,7 +451,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "6\n",
+      "25\n"
      ]
     }
    ],
@@ -456,7 +461,8 @@
     "def calculate_ert(first_time,last_time) :\n",
     "    return round((int(last_time)-int(first_time)) / 60000) + 4\n",
     "\n",
-    "print(calculate_ert('1744326418000',1744326541000))"
+    "print(calculate_ert('1744326418000',1744326541000))\n",
+    "print(calculate_ert('1743829005000',1743830281000))"
    ]
   },
   {
