tuesday noon push

--- a/scripts/active_dispatch_combine_and_process.ipynb
+++ b/scripts/active_dispatch_combine_and_process.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "51e6c823-43ec-4ca1-86b6-39b09985f996",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
      "output_type": "stream",
      "text": [
       "starting...\n",
-      "processing file 2527 of 2527: 1744649821000.csv                  \n",
+      "processing file 3637 of 3637: 1745330941000.csv                  \n",
       "done!\n"
      ]
     }
@@ -105,7 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30074\n"
+      "40505\n"
      ]
     }
    ],
@@ -127,8 +127,8 @@
       "incident_type_name          0\n",
       "call_received_time          0\n",
       "location                    0\n",
-      "location_description    30074\n",
-      "city_name                   0\n",
+      "location_description    40505\n",
+      "city_name                   1\n",
       "last_updated                0\n",
       "dtype: int64\n"
      ]
@@ -164,17 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "da9c0303-7505-42e0-8e57-bb48e0b6e847",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ad = ad.sort_values(by = 'call_received_time').reset_index()"
+    "ad = ad.sort_values(by = 'call_received_time').reset_index(drop = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "7d6842d1-418e-494e-a9ac-4aebc80db4d8",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>incident_type_code</th>\n",
        "      <th>incident_type_name</th>\n",
        "      <th>call_received_time</th>\n",
@@ -211,7 +210,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>618</td>\n",
        "      <td>70A</td>\n",
        "      <td>RESIDENCE-BURGLARY ALARM</td>\n",
        "      <td>1743085667000</td>\n",
@@ -221,7 +219,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1359</td>\n",
        "      <td>71A</td>\n",
        "      <td>NON-RESIDENCE-BURGLARY ALARM</td>\n",
        "      <td>1743085918000</td>\n",
@@ -231,7 +228,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2658</td>\n",
        "      <td>83P</td>\n",
        "      <td>SHOTS FIRED</td>\n",
        "      <td>1743093178000</td>\n",
@@ -241,7 +237,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2616</td>\n",
        "      <td>71P</td>\n",
        "      <td>BURGLARY-NON-RESIDENCE BREAK-IN</td>\n",
        "      <td>1743094882000</td>\n",
@@ -251,7 +246,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>619</td>\n",
        "      <td>70A</td>\n",
        "      <td>RESIDENCE-BURGLARY ALARM</td>\n",
        "      <td>1743095110000</td>\n",
@@ -267,107 +261,88 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3478</th>\n",
-       "      <td>22</td>\n",
-       "      <td>51P</td>\n",
-       "      <td>CUTTING OR STABBING IN PROGRESS</td>\n",
-       "      <td>1744646589000</td>\n",
-       "      <td>631 7TH AVE S</td>\n",
-       "      <td>CENTRAL</td>\n",
-       "      <td>1744647480000</td>\n",
+       "      <th>4804</th>\n",
+       "      <td>71A</td>\n",
+       "      <td>NON-RESIDENCE-BURGLARY ALARM</td>\n",
+       "      <td>1745330069000</td>\n",
+       "      <td>7115 SOUTHPOINT PKWY</td>\n",
+       "      <td>BRENTWOOD DAVIDSON COUNTY</td>\n",
+       "      <td>1745330941000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3479</th>\n",
-       "      <td>1357</td>\n",
-       "      <td>70P</td>\n",
-       "      <td>BURGLARY-RESIDENCE BREAK-IN</td>\n",
-       "      <td>1744646715000</td>\n",
-       "      <td>1211 BELL RD</td>\n",
-       "      <td>ANTIOCH</td>\n",
-       "      <td>1744648020000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3480</th>\n",
-       "      <td>616</td>\n",
+       "      <th>4805</th>\n",
        "      <td>64P</td>\n",
        "      <td>CORPSE/D.O.A</td>\n",
-       "      <td>1744646770000</td>\n",
-       "      <td>910 33RD AVE N</td>\n",
-       "      <td>NORTH</td>\n",
-       "      <td>1744649821000</td>\n",
+       "      <td>1745330247000</td>\n",
+       "      <td>3140 HAMILTON CHURCH RD</td>\n",
+       "      <td>ANTIOCH</td>\n",
+       "      <td>1745330941000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3481</th>\n",
-       "      <td>617</td>\n",
+       "      <th>4806</th>\n",
        "      <td>64P</td>\n",
        "      <td>CORPSE/D.O.A</td>\n",
-       "      <td>1744648594000</td>\n",
-       "      <td>508 MAIN ST</td>\n",
-       "      <td>EDGEFIELD</td>\n",
-       "      <td>1744648741000</td>\n",
+       "      <td>1745330490000</td>\n",
+       "      <td>5005 SUNSHINE DR</td>\n",
+       "      <td>ANTIOCH</td>\n",
+       "      <td>1745330941000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3482</th>\n",
-       "      <td>482</td>\n",
-       "      <td>57P</td>\n",
-       "      <td>FIGHT/ASSAULT</td>\n",
-       "      <td>1744649187000</td>\n",
-       "      <td>3900 STEPHENS RIDGE WAY</td>\n",
-       "      <td>ANTIOCH</td>\n",
-       "      <td>1744649821000</td>\n",
+       "      <th>4807</th>\n",
+       "      <td>64P</td>\n",
+       "      <td>CORPSE/D.O.A</td>\n",
+       "      <td>1745330669000</td>\n",
+       "      <td>1600 GARTLAND AVE</td>\n",
+       "      <td>EAST</td>\n",
+       "      <td>1745330941000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4808</th>\n",
+       "      <td>71A</td>\n",
+       "      <td>NON-RESIDENCE-BURGLARY ALARM</td>\n",
+       "      <td>1745330728000</td>\n",
+       "      <td>3138 DICKERSON PIKE</td>\n",
+       "      <td>EAST</td>\n",
+       "      <td>1745330941000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3483 rows × 7 columns</p>\n",
+       "<p>4809 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      index incident_type_code               incident_type_name  \\\n",
-       "0       618                70A         RESIDENCE-BURGLARY ALARM   \n",
-       "1      1359                71A     NON-RESIDENCE-BURGLARY ALARM   \n",
-       "2      2658                83P                      SHOTS FIRED   \n",
-       "3      2616                71P  BURGLARY-NON-RESIDENCE BREAK-IN   \n",
-       "4       619                70A         RESIDENCE-BURGLARY ALARM   \n",
-       "...     ...                ...                              ...   \n",
-       "3478     22                51P  CUTTING OR STABBING IN PROGRESS   \n",
-       "3479   1357                70P      BURGLARY-RESIDENCE BREAK-IN   \n",
-       "3480    616                64P                     CORPSE/D.O.A   \n",
-       "3481    617                64P                     CORPSE/D.O.A   \n",
-       "3482    482                57P                    FIGHT/ASSAULT   \n",
+       "     incident_type_code               incident_type_name  call_received_time  \\\n",
+       "0                   70A         RESIDENCE-BURGLARY ALARM       1743085667000   \n",
+       "1                   71A     NON-RESIDENCE-BURGLARY ALARM       1743085918000   \n",
+       "2                   83P                      SHOTS FIRED       1743093178000   \n",
+       "3                   71P  BURGLARY-NON-RESIDENCE BREAK-IN       1743094882000   \n",
+       "4                   70A         RESIDENCE-BURGLARY ALARM       1743095110000   \n",
+       "...                 ...                              ...                 ...   \n",
+       "4804                71A     NON-RESIDENCE-BURGLARY ALARM       1745330069000   \n",
+       "4805                64P                     CORPSE/D.O.A       1745330247000   \n",
+       "4806                64P                     CORPSE/D.O.A       1745330490000   \n",
+       "4807                64P                     CORPSE/D.O.A       1745330669000   \n",
+       "4808                71A     NON-RESIDENCE-BURGLARY ALARM       1745330728000   \n",
        "\n",
-       "      call_received_time                     location       city_name  \\\n",
-       "0          1743085667000                719 MYRTLE ST            EAST   \n",
-       "1          1743085918000          3188 DICKERSON PIKE            EAST   \n",
-       "2          1743093178000             1433 PENNOCK AVE            EAST   \n",
-       "3          1743094882000               360 WALLACE RD   PARAGON MILLS   \n",
-       "4          1743095110000  1236 BRENTWOOD HIGHLANDS DR  NIPPERS CORNER   \n",
-       "...                  ...                          ...             ...   \n",
-       "3478       1744646589000                631 7TH AVE S         CENTRAL   \n",
-       "3479       1744646715000                 1211 BELL RD         ANTIOCH   \n",
-       "3480       1744646770000               910 33RD AVE N           NORTH   \n",
-       "3481       1744648594000                  508 MAIN ST       EDGEFIELD   \n",
-       "3482       1744649187000      3900 STEPHENS RIDGE WAY         ANTIOCH   \n",
+       "                         location                  city_name   last_updated  \n",
+       "0                   719 MYRTLE ST                       EAST  1743103621000  \n",
+       "1             3188 DICKERSON PIKE                       EAST  1743103621000  \n",
+       "2                1433 PENNOCK AVE                       EAST  1743115680000  \n",
+       "3                  360 WALLACE RD              PARAGON MILLS  1743110280000  \n",
+       "4     1236 BRENTWOOD HIGHLANDS DR             NIPPERS CORNER  1743103621000  \n",
+       "...                           ...                        ...            ...  \n",
+       "4804         7115 SOUTHPOINT PKWY  BRENTWOOD DAVIDSON COUNTY  1745330941000  \n",
+       "4805      3140 HAMILTON CHURCH RD                    ANTIOCH  1745330941000  \n",
+       "4806             5005 SUNSHINE DR                    ANTIOCH  1745330941000  \n",
+       "4807            1600 GARTLAND AVE                       EAST  1745330941000  \n",
+       "4808          3138 DICKERSON PIKE                       EAST  1745330941000  \n",
        "\n",
-       "       last_updated  \n",
-       "0     1743103621000  \n",
-       "1     1743103621000  \n",
-       "2     1743115680000  \n",
-       "3     1743110280000  \n",
-       "4     1743103621000  \n",
-       "...             ...  \n",
-       "3478  1744647480000  \n",
-       "3479  1744648020000  \n",
-       "3480  1744649821000  \n",
-       "3481  1744648741000  \n",
-       "3482  1744649821000  \n",
-       "\n",
-       "[3483 rows x 7 columns]"
+       "[4809 rows x 6 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "313f044e-0327-4b2b-87e2-174ff0ee19c3",
    "metadata": {},
    "outputs": [],
@@ -412,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "id": "04391844-4068-48b9-93dd-bbf580ecd1db",
    "metadata": {},
    "outputs": [
@@ -467,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "id": "b3cc7e11-5a74-4fcb-aef1-72f7e242b7bf",
    "metadata": {},
    "outputs": [
@@ -475,7 +450,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "processing row 3483 (index 3482) of 3483: call received: 1744649187000          \n",
+      "processing row 4809 (index 4808) of 4809: call received: 1745330728000          \n",
       "done!\n"
      ]
     }
@@ -506,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "id": "278099f1-c932-467b-b3ab-bc57715c40c7",
    "metadata": {},
    "outputs": [],
