wednesday morning push

--- a/scripts/active_dispatch_json_extract.ipynb
+++ b/scripts/active_dispatch_json_extract.ipynb
@@ -13,7 +13,7 @@
       "Starting imports\n",
       "Starting loop\n",
       "\n",
-      "Processed: 238.  Seconds until next process: 249    "
+      "Processed: 9.  Seconds until next process: 145    "
      ]
     }
    ],
@@ -56,7 +56,7 @@
     "                    active_dispatch.loc[len(active_dispatch)] = new_row\n",
     "                if len(active_dispatch) > 0 :\n",
     "                    last_updated = active_dispatch.loc[0,'last_updated']\n",
-    "                    active_dispatch.to_csv('../data/active_dispatch/' + str(last_updated) + '.csv', index=False)\n",
+    "                    active_dispatch.to_csv('../../data/active_dispatch/' + str(last_updated) + '.csv', index=False)\n",
     "                    i += 1\n",
     "                t = 360          # set the next countdown to 360 seconds, 5 minutes later\n",
     "            else :\n",
