--- a/scripts/timelapse_geocode.ipynb
+++ b/scripts/timelapse_geocode.ipynb
@@ -2,19 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "5d9054b9-7687-48bd-bc79-915576167c17",
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime as dt\n",
     "from datetime import timedelta\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 14,
+   "id": "8f0aaa2a-20b1-45bd-8dd8-62e4223f059e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# After geocoding, asign them clock ticks (for animation frames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "4edd93df-16d1-47f4-bd2e-acb5e4fa9ef8",
    "metadata": {},
    "outputs": [],
@@ -22,13 +34,13 @@
     "timestart = '2025-04-05 00:00:00'\n",
     "timeend = '2025-04-07 00:00:00'\n",
     "\n",
-    "input_file = '../data/active_dispatch_4_5.csv'\n",
-    "output_file = '../data/active_dispatch_ticks.csv'"
+    "input_file = '../../data/active_dispatch_4_5_geocoded.csv'\n",
+    "output_file = '../../data/active_dispatch_ticks.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 18,
    "id": "1954c858-982e-4b48-876f-84418868b30c",
    "metadata": {},
    "outputs": [],
@@ -40,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 20,
    "id": "b957bd31-62c6-4658-a42a-5410f15ed656",
    "metadata": {},
    "outputs": [],
@@ -50,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 22,
    "id": "166f5898-8b56-4a2c-830e-74e0e54fdc0a",
    "metadata": {},
    "outputs": [],
@@ -64,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 24,
    "id": "23dbeada-4b90-4416-8c7b-0e137582a808",
    "metadata": {},
    "outputs": [],
@@ -74,17 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 26,
    "id": "9a7da643-260d-4626-b348-c6e8adb33558",
    "metadata": {},
    "outputs": [],
    "source": [
-    "how_many_minutes = 5 # how long each tick will be"
+    "how_many_minutes = 2 # how long each tick will be"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 28,
    "id": "7b77a188-f479-46da-98d0-28cd1e17d48c",
    "metadata": {},
    "outputs": [],
@@ -95,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 30,
    "id": "a7e981bf-f4c8-4b8d-beb6-3ca81307fc21",
    "metadata": {},
    "outputs": [],
@@ -106,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 32,
    "id": "f8565e68-fc52-4023-8091-1860fae8d651",
    "metadata": {},
    "outputs": [
@@ -114,7 +126,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Garrett\\AppData\\Local\\Temp\\ipykernel_5104\\78851439.py:7: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\Garrett\\AppData\\Local\\Temp\\ipykernel_10896\\1221641597.py:8: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  processed_ticks = pd.concat([processed_ticks, current_ticks])\n"
      ]
     }
@@ -124,7 +136,8 @@
     "\n",
     "    current_ticks = ad[(current_tick_time <= ad['estimated_resolved_time']) & (current_tick_time >= ad['date_and_time'])].reset_index(drop = True)\n",
     "    current_ticks['tick'] = tick\n",
-    "    current_ticks = current_ticks[['tick','code','date','hr','time','address','ert_mins','lat','lon']]\n",
+    "    current_ticks['display_clock'] = current_tick_time.strftime(\"%I:%M %p\")\n",
+    "    current_ticks = current_ticks[['tick','code','date','hr','time','display_clock','address','ert_mins','lat','lon']]\n",
     "\n",
     "    processed_ticks = pd.concat([processed_ticks, current_ticks])\n",
     "    \n",
@@ -134,217 +147,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 33,
    "id": "6e52c60a-7682-4c6e-bd4c-2f7167f235ef",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tick</th>\n",
-       "      <th>code</th>\n",
-       "      <th>date</th>\n",
-       "      <th>hr</th>\n",
-       "      <th>time</th>\n",
-       "      <th>address</th>\n",
-       "      <th>ert_mins</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>64P</td>\n",
-       "      <td>4/5/2025</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0:06:56</td>\n",
-       "      <td>3056 DICKERSON PIKE, NASHVILLE, TN</td>\n",
-       "      <td>15</td>\n",
-       "      <td>36.229127</td>\n",
-       "      <td>-86.759745</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4</td>\n",
-       "      <td>64P</td>\n",
-       "      <td>4/5/2025</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0:06:56</td>\n",
-       "      <td>3056 DICKERSON PIKE, NASHVILLE, TN</td>\n",
-       "      <td>15</td>\n",
-       "      <td>36.229127</td>\n",
-       "      <td>-86.759745</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>64P</td>\n",
-       "      <td>4/5/2025</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0:06:56</td>\n",
-       "      <td>3056 DICKERSON PIKE, NASHVILLE, TN</td>\n",
-       "      <td>15</td>\n",
-       "      <td>36.229127</td>\n",
-       "      <td>-86.759745</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>52P</td>\n",
-       "      <td>4/5/2025</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0:19:45</td>\n",
-       "      <td>1410 DOUGLAS AVE, NASHVILLE, TN</td>\n",
-       "      <td>11</td>\n",
-       "      <td>36.191982</td>\n",
-       "      <td>-86.740490</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6</td>\n",
-       "      <td>52P</td>\n",
-       "      <td>4/5/2025</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0:19:45</td>\n",
-       "      <td>1410 DOUGLAS AVE, NASHVILLE, TN</td>\n",
-       "      <td>11</td>\n",
-       "      <td>36.191982</td>\n",
-       "      <td>-86.740490</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>577</td>\n",
-       "      <td>70A</td>\n",
-       "      <td>4/6/2025</td>\n",
-       "      <td>23</td>\n",
-       "      <td>23:20:16</td>\n",
-       "      <td>924 CANTRELL AVE, NASHVILLE, TN</td>\n",
-       "      <td>41</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>577</td>\n",
-       "      <td>57P</td>\n",
-       "      <td>4/6/2025</td>\n",
-       "      <td>23</td>\n",
-       "      <td>23:23:18</td>\n",
-       "      <td>703 BATTLE RD, NASHVILLE, TN</td>\n",
-       "      <td>89</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>577</td>\n",
-       "      <td>71A</td>\n",
-       "      <td>4/6/2025</td>\n",
-       "      <td>23</td>\n",
-       "      <td>23:38:52</td>\n",
-       "      <td>928 RIVERGATE PKWY, NASHVILLE, TN</td>\n",
-       "      <td>22</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>577</td>\n",
-       "      <td>83P</td>\n",
-       "      <td>4/6/2025</td>\n",
-       "      <td>23</td>\n",
-       "      <td>23:41:55</td>\n",
-       "      <td>305 STARBOARD CT, NASHVILLE, TN</td>\n",
-       "      <td>19</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>577</td>\n",
-       "      <td>71A</td>\n",
-       "      <td>4/6/2025</td>\n",
-       "      <td>23</td>\n",
-       "      <td>23:54:06</td>\n",
-       "      <td>3748 NOLENSVILLE PIKE, NASHVILLE, TN</td>\n",
-       "      <td>7</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>13649 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   tick code      date  hr      time                               address  \\\n",
-       "0     3  64P  4/5/2025   0   0:06:56    3056 DICKERSON PIKE, NASHVILLE, TN   \n",
-       "0     4  64P  4/5/2025   0   0:06:56    3056 DICKERSON PIKE, NASHVILLE, TN   \n",
-       "0     5  64P  4/5/2025   0   0:06:56    3056 DICKERSON PIKE, NASHVILLE, TN   \n",
-       "1     5  52P  4/5/2025   0   0:19:45       1410 DOUGLAS AVE, NASHVILLE, TN   \n",
-       "0     6  52P  4/5/2025   0   0:19:45       1410 DOUGLAS AVE, NASHVILLE, TN   \n",
-       "..  ...  ...       ...  ..       ...                                   ...   \n",
-       "9   577  70A  4/6/2025  23  23:20:16       924 CANTRELL AVE, NASHVILLE, TN   \n",
-       "10  577  57P  4/6/2025  23  23:23:18          703 BATTLE RD, NASHVILLE, TN   \n",
-       "11  577  71A  4/6/2025  23  23:38:52     928 RIVERGATE PKWY, NASHVILLE, TN   \n",
-       "12  577  83P  4/6/2025  23  23:41:55       305 STARBOARD CT, NASHVILLE, TN   \n",
-       "13  577  71A  4/6/2025  23  23:54:06  3748 NOLENSVILLE PIKE, NASHVILLE, TN   \n",
-       "\n",
-       "   ert_mins        lat        lon  \n",
-       "0        15  36.229127 -86.759745  \n",
-       "0        15  36.229127 -86.759745  \n",
-       "0        15  36.229127 -86.759745  \n",
-       "1        11  36.191982 -86.740490  \n",
-       "0        11  36.191982 -86.740490  \n",
-       "..      ...        ...        ...  \n",
-       "9        41        NaN        NaN  \n",
-       "10       89        NaN        NaN  \n",
-       "11       22        NaN        NaN  \n",
-       "12       19        NaN        NaN  \n",
-       "13        7        NaN        NaN  \n",
-       "\n",
-       "[13649 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "processed_ticks"
+    "processed_ticks.to_csv(output_file, index=False)"
    ]
   },
   {
@@ -419,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "id": "cecc9549-e379-4d62-bbcb-2b2bd5b72bd5",
    "metadata": {},
    "outputs": [],
@@ -429,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "id": "49399b95-4bf8-4ad9-9b29-957506b05293",
    "metadata": {},
    "outputs": [],
@@ -439,6 +247,80 @@
     "    \n",
     "    n = ArcGIS().geocode(address_or_intersection)\n",
     "    return n[0], n[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5caca9bd-3ed7-4b36-a3bc-66dfe5040088",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_file = '../../data/active_dispatch_4_5.csv'\n",
+    "output_file = '../../data/active_dispatch_4_5_geocoded.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "349a01bd-93d0-42c8-ade7-8b3c02af9275",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(input_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "429faaf5-5d7a-42f1-b1b1-ca623963c8b3",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "starting...\n",
+      "Processing 715 of 715\n",
+      "...done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('starting...')\n",
+    "\n",
+    "for index, row in df.iterrows() :\n",
+    "    print(f\"\\rProcessing {index+1} of {len(df)}\", end = \"\")\n",
+    "    if not (row['lat'] > -5000) : # I tried np.nan, it didn't seem to work, so this is a quick workaround\n",
+    "        address, coordinates = geocode(row['address'])\n",
+    "        df.loc[index,'lat'] = coordinates[0]\n",
+    "        df.loc[index,'lon'] = coordinates[1]\n",
+    "        time.sleep(3)\n",
+    "\n",
+    "print()\n",
+    "print('...done!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "1c8020cb-b70e-483a-ab95-fdf69c6246bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(output_file, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f343851-c23f-4b03-b4f9-e1b2fa935689",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# testing ArcGIS..."
    ]
   },
   {
